# pai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  mise.toml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
examples/: agent-responses.md
examples/fastapi/: README.md  demo.py  mise.toml  pyproject.toml
examples/fastapi/app/: main.py  orders.py  serve.py
examples/fastapi/scripts/: request_health.py  request_thread_crash.py
examples/pure-python/: README.md  demo.py  mise.toml  pyproject.toml
examples/pure-python/scripts/: failing_order.py  successful_order.py
examples/pure-python/tests/: test_orders.py
skill/: SKILL.md
spec/: ARCHITECTURE.md  OVERVIEW.md  PHASES.md  REFERENCES.md  TASKS.md
src/pai/: __init__.py  bundle.py  cli.py  event_names.py  event_records.py  events.py  pytest_plugin.py  query.py  run.py  run_events.py  runner.py  writer.py
src/pai/bootstrap/: sitecustomize.py
src/pai/collectors/: calls.py  exceptions.py  imports.py
src/pai/collectors/side_effects/: __init__.py  ai.py  aiobotocore.py  anthropic.py  asyncpg.py  aws.py  boto3.py  http.py  httpx.py  openai.py  registry.py  requests.py  sql.py  sqlalchemy.py
tests/: conftest.py  test_bundle.py  test_cli.py  test_collectors_ai.py  test_collectors_aiobotocore.py  test_collectors_anthropic.py  test_collectors_asyncpg.py  test_collectors_aws.py  test_collectors_boto3.py  test_collectors_calls.py  test_collectors_exceptions.py  test_collectors_http.py  test_collectors_httpx.py  test_collectors_imports.py  test_collectors_openai.py  test_collectors_requests.py  test_collectors_sql.py  test_collectors_sqlalchemy.py  test_events.py  test_examples.py  test_import_hooks.py  test_integration.py  test_pytest_plugin.py  test_query.py  test_run.py  test_runner.py  test_writer.py
