[project]
name = "pai-example-fastapi"
version = "0.1.0"
description = "FastAPI service that demonstrates PAI around a long-running process"
readme = "README.md"
authors = [
    { name = "Or Shemtov", email = "oriesh@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "pai",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
pai = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
