[project]
name = "pai-example-pure-python"
version = "0.1.0"
description = "Pure Python scripts that demonstrate PAI runtime tracing"
readme = "README.md"
authors = [
    { name = "Or Shemtov", email = "oriesh@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pai-trace",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
pai-trace = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
